(executable
 (name ppx_driver)
 (modules ppx_driver)
 (libraries ntt_ppx ppxlib))

(rule
 (targets test.actual.ml)
 (deps
  (:pp ppx_driver.exe)
  (:input test.ml))
 (action
  (run ./%{pp} -impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action
  (diff test.expected.ml test.actual.ml)))

(test
 (name test)
 (modules test)
 (preprocess
  (pps ntt_ppx)))
